// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wordBoundaryDetection renders 0 1`] = `
Array [
  .c0 {
  word-boundary-detection: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: 0;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryDetection renders function 1`] = `
Array [
  .c0 {
  word-boundary-detection: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: has;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: has;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryDetection renders invalid theme path 1`] = `
Array [
  .c0 {
  word-boundary-detection: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryDetection renders negative number 1`] = `
Array [
  .c0 {
  word-boundary-detection: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryDetection renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    word-boundary-detection: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-detection: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-detection: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-boundary-detection: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    word-boundary-detection: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-detection: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-detection: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-boundary-detection: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-detection: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-detection: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-detection: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-boundary-detection: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-detection: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-detection: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    word-boundary-detection: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    word-boundary-detection: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryDetection renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    word-boundary-detection: July;
  }
}

@media April {
  .c0 {
    word-boundary-detection: August;
  }
}

@media January {
  .c0 {
    word-boundary-detection: September;
  }
}

@media April {
  .c0 {
    word-boundary-detection: November;
  }
}

@media June {
  .c0 {
    word-boundary-detection: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    word-boundary-detection: July;
  }
}

@media April {
  .c0 {
    word-boundary-detection: August;
  }
}

@media January {
  .c0 {
    word-boundary-detection: September;
  }
}

@media April {
  .c0 {
    word-boundary-detection: November;
  }
}

@media June {
  .c0 {
    word-boundary-detection: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-boundary-detection: January;
  }
}

@media April {
  .c0 {
    word-boundary-detection: December;
  }
}

@media January {
  .c0 {
    word-boundary-detection: April;
  }
}

@media April {
  .c0 {
    word-boundary-detection: May;
  }
}

@media June {
  .c0 {
    word-boundary-detection: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    word-boundary-detection: January;
  }
}

@media April {
  .c0 {
    word-boundary-detection: December;
  }
}

@media January {
  .c0 {
    word-boundary-detection: April;
  }
}

@media April {
  .c0 {
    word-boundary-detection: May;
  }
}

@media June {
  .c0 {
    word-boundary-detection: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryDetection renders postitive number 1`] = `
Array [
  .c0 {
  word-boundary-detection: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryDetection renders string 1`] = `
Array [
  .c0 {
  word-boundary-detection: July;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: July;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: June;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: June;
}

<div
    className="c0"
  />,
]
`;

exports[`wordBoundaryDetection renders valid theme path 1`] = `
Array [
  .c0 {
  word-boundary-detection: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  word-boundary-detection: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
